fix wine bottles markup

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     
     
     <p><a name="products"></a></p>
-    <div class="site-section mt-5">
+    <div class="site-section">
       <div class="container">
-        <div class="row mb-5">
+        <div class="row">
           <div class="col-12 section-title text-center mb-5">
             <h2 class="d-block">Коллекция вин</h2>
             <p>Вино — один из самых благородных и многогранных напитков в мире! Виноделие берёт своё начало с незапамятных времён. Вино упоминается в Библии и Коране, греческой и римской мифологии, где были свои боги вина (к примеру, Дионис). Стоит отметить, что почти у каждого народа существует своя легенда, повествующая о появлении божественного эликсира — вина.
@@ -117,32 +117,38 @@
         </div>
         <div class="row">
           <div class="col-lg-4 mb-5 col-md-6">
-            <div class="wine_v_1 text-center pb-4">
+            <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/izabella.png" alt="Image" class="img-fluid"></a>
               <div>
-                <h3 class="heading mb-1"><p><font color="black">Изабелла</font></p></h3>
-                <h3 class="heading mb-1"><p>Сорт винограда - Изабелла</p></h3>
-                <span class="price">300 р.</span>
+                <h3 class="heading mt-3 mb-3"><font color="black">Изабелла</font></h3>
+                <p>
+                  Сорт винограда - Изабелла<br/>
+                  <span class="price">300 р.</span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-5 col-md-6">
-            <div class="wine_v_1 text-center pb-4">
+            <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/granatovyi_braslet.png" alt="Image" class="img-fluid"></a>
               <div>
-                <h3 class="heading mb-1"><p><font color="black">Гранатовый браслет</font></p></h3>
-                <h3 class="heading mb-1"><p>Сорт винограда - Мускат розовый</p></h3>
-                <span class="price">350 р.</span>
+                <h3 class="heading mt-3 mb-3"><font color="black">Гранатовый браслет</font></h3>
+                <p>
+                  Сорт винограда - Мускат розовый<br/>
+                  <span class="price">350 р.</span>
+                </p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-5 col-md-6">
-            <div class="wine_v_1 text-center pb-4">
+            <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/shardone.png" alt="Image" class="img-fluid"></a>
               <div>
-                <h3 class="heading mb-1"><p><font color="black">Шардоне</font></p></h3>
-                <h3 class="heading mb-1"><p>Сорт винограда - Шардоне</p></h3>
-                <span class="price">350 р.</span>
+                <h3 class="heading mt-3 mb-3"><font color="black">Шардоне</font></h3>
+                <p>
+                  Сорт винограда - Шардоне<br/>
+                  <span class="price">350 р.</span>
+                </p>
               </div>
             </div>
           </div>
