fix broken markup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Montserrat&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Montserrat&amp;display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
