--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
      <div class="container">
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
-            <span class="sub-title">Отзывы</span>
-            <h2>Домашние вина</h2>
+            <h2 style="font-size: 3rem;">проверено временем</h2>
+            <span class="sub-title" style="font-size: 2.5rem;">Уже 90 лет с вами</span>
           </div>
         </div>
       </div>
