--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Wines</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="images/favicon.ico" type="image/png">
 
   
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Montserrat&amp;display=swap" rel="stylesheet"> 
