Fix broken layout

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="images/favicon.ico" type="image/png">
 
-  
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600|Montserrat&amp;display=swap" rel="stylesheet"> 
+  <!-- escape | in url query with %7C . See more https://developer.donnoval.ru/w3cvalidation/ -->
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600%7CMontserrat&amp;display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
