Remove redudant HTML closing tag </font>

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/izabella.png" alt="Image" class="img-fluid">
               <div>
-                <h3 class="heading mt-3 mb-3 text-dark">Изабелла</font></h3>
+                <h3 class="heading mt-3 mb-3 text-dark">Изабелла</h3>
                 <p>
                   Сорт винограда - Изабелла<br/>
                   <span class="price">300 р.</span>
@@ -130,7 +130,7 @@
             <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/granatovyi_braslet.png" alt="Image" class="img-fluid">
               <div>
-                <h3 class="heading mt-3 mb-3 text-dark">Гранатовый браслет</font></h3>
+                <h3 class="heading mt-3 mb-3 text-dark">Гранатовый браслет</h3>
                 <p>
                   Сорт винограда - Мускат розовый<br/>
                   <span class="price">350 р.</span>
@@ -142,7 +142,7 @@
             <div class="wine_v_1 text-center pb-4 pt-5">
               <img src="images/shardone.png" alt="Image" class="img-fluid">
               <div>
-                <h3 class="heading mt-3 mb-3 text-dark">Шардоне</font></h3>
+                <h3 class="heading mt-3 mb-3 text-dark">Шардоне</h3>
                 <p>
                   Сорт винограда - Шардоне<br/>
                   <span class="price">350 р.</span>
