Remove redudant role attribute

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="d-flex align-items-center">
             
             <div class="mx-auto">
-              <nav class="site-navigation position-relative text-left" role="navigation">
+              <nav class="site-navigation position-relative text-left">
                 <ul class="site-menu main-menu js-clone-nav mx-auto d-none pl-0 d-md-block border-none">
                   <li class="active"><a href="index.html" class="nav-link text-left">Главная</a></li>
                   <li><a href="#products" class="nav-link text-left">Коллекция вин</a></li>
