fix not used wine name

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </blockquote>
           <blockquote class="testimony">
             <img src="images/person_2.jpg" alt="Фото">
-            <p>&ldquo;Вино столовое полусладкое белое Инкерман - неплохое вино, молодое, невыдержанное. Особенности технологии его производства и дают, очевидно, такой вкус.
+            <p>&ldquo;Вино столовое полусладкое белое Кокур - неплохое вино, молодое, невыдержанное. Особенности технологии его производства и дают, очевидно, такой вкус.
               Вкус - довольно простой, несложный, но приятный. Невыдержанное вино в чем-то близко к молодому виноградному соку.
               Пьется легко, вкус приятно- округлый, нежный.&rdquo;</p>
             <p class="small text-primary">&mdash; Михаил Яковлев</p>
