separated static from media

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Wines</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="images/favicon.ico" type="image/png">
+  <link rel="icon" href="assets/favicon.ico" type="image/png">
 
   <!-- escape | in url query with %7C . See more https://developer.donnoval.ru/w3cvalidation/ -->
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600%7CMontserrat&amp;display=swap" rel="stylesheet"> 
@@ -43,7 +43,7 @@
         <div class="d-flex">
           <div class="p-2 flex-grow-1">
             <a href="index.html" class="site-logo mx-auto d-block">
-              <img src="images/logo.png" alt="Image" class="img-fluid">
+              <img src="assets/logo.png" alt="Image" class="img-fluid">
             </a>
           </div>
           <div class="p-2 align-self-center d-md-none">
@@ -82,7 +82,7 @@
 
     
     <div class="owl-carousel hero-slide owl-style">
-      <div class="intro-section container" style="background-image: url('images/hero_1.jpg');">
+      <div class="intro-section container" style="background-image: url('assets/hero_1.jpg');">
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
             <span class="sub-title">Высший сорт</span>
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <div class="intro-section container" style="background-image: url('images/hero_2.jpg');">
+      <div class="intro-section container" style="background-image: url('assets/hero_2.jpg');">
         <div class="row justify-content-center text-center align-items-center">
           <div class="col-md-8">
             <span class="sub-title">Добро пожаловать</span>
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <div class="hero-2" style="background-image: url('images/hero_2.jpg');">
+    <div class="hero-2" style="background-image: url('assets/hero_2.jpg');">
     <div><a id="feedback"></a></div>
      <div class="container">
         <div class="row justify-content-center text-center align-items-center">
@@ -171,7 +171,7 @@
         <div class="owl-carousel owl-slide-3 owl-slide">
         
           <blockquote class="testimony">
-            <img src="images/person_1.jpg" alt="Фото">
+            <img src="assets/person_1.jpg" alt="Фото">
             <p>&ldquo;Если бы вино Киндзмараули вдруг стало мужчиной, то это был бы средних лет (35-40 лет) аристократичный мужчина, в белой дорогой рубашке и брюках,
                хорошей обуви, статный, знающий чего он хочет, успешный, но имеющий в своей душе такие струны,
                с которыми может быть созвучна истинная женская трепетность и беззащитность.
@@ -179,14 +179,14 @@
             <p class="small text-primary">&mdash; Марина Ли</p>
           </blockquote>
           <blockquote class="testimony">
-            <img src="images/person_2.jpg" alt="Фото">
+            <img src="assets/person_2.jpg" alt="Фото">
             <p>&ldquo;Вино столовое полусладкое белое Кокур - неплохое вино, молодое, невыдержанное. Особенности технологии его производства и дают, очевидно, такой вкус.
               Вкус - довольно простой, несложный, но приятный. Невыдержанное вино в чем-то близко к молодому виноградному соку.
               Пьется легко, вкус приятно- округлый, нежный.&rdquo;</p>
             <p class="small text-primary">&mdash; Михаил Яковлев</p>
           </blockquote>
           <blockquote class="testimony">
-            <img src="images/person_3.jpg" alt="Фото">
+            <img src="assets/person_3.jpg" alt="Фото">
             <p>&ldquo;Вина Шардоне хорошо подходят для нейтральных по остроте мясным, рыбным блюдам, блюдам из птицы, сыры и фрукты (яблоко, апельсин и груша). Вино мне понравилось, голова на утро от него не болела. Рекомендую.&rdquo;</p>
             <p class="small text-primary">&mdash; Андрей Власов</p>
           </blockquote>
