fix spelling error

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p>&ldquo;Если бы вино Киндзмараули вдруг стало мужчиной, то это был бы средних лет (35-40 лет) аристократичный мужчина, в белой дорогой рубашке и брюках,
                хорошей обуви, статный, знающий чего он хочет, успешный, но имеющий в своей душе такие струны,
                с которыми может быть созвучна истинная женская трепетность и беззащитность.
-               Он может быть незаметен, он не бросается в глаза, но от того, что он есть, все вокруг становиться на свои места.&rdquo;</p>
+               Он может быть незаметен, он не бросается в глаза, но от того, что он есть, все вокруг становится на свои места.&rdquo;</p>
             <p class="small text-primary">&mdash; Марина Ли</p>
           </blockquote>
           <blockquote class="testimony">
