fix grammatical errors

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </blockquote>
           <blockquote class="testimony">
             <img src="assets/person_3.jpg" alt="Фото">
-            <p>&ldquo;Вина Шардоне хорошо подходят для нейтральных по остроте мясным, рыбным блюдам, блюдам из птицы, сыры и фрукты (яблоко, апельсин и груша). Вино мне понравилось, голова на утро от него не болела. Рекомендую.&rdquo;</p>
+            <p>&ldquo;Вина Шардоне хорошо подходят к нейтральным по остроте мясным, рыбным блюдам, блюдам из птицы, сырам и фруктам (яблоко, апельсин и груша). Вино мне понравилось, голова на утро от него не болела. Рекомендую.&rdquo;</p>
             <p class="small text-primary">&mdash; Андрей Власов</p>
           </blockquote>
        
